sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:2: error: Missing closing brace `}' assumed here
def bubbleSort3() 
^AlgBubbleSort3:3: error: expected class or object definition
{
^